--- a/requirements.txt
+++ b/requirements.txt
@@ -4,3 +4,10 @@ pathlib2==2.3.5
 pyparsing==2.4.7
 python-dateutil==2.8.1
 python-dotenv==0.15.0
+
+###### for cvlib and keras ######
+opencv-python
+cvlib
+matplotlib
+tensorflow
+keras
